--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^20.2.0",
     "@primeng/themes": "^20.1.2",
     "@primeuix/themes": "^1.2.3",
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
     "rxjs": "~7.8.0",
