--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@angular/router": "^20.2.0",
     "@primeng/themes": "^20.1.2",
     "@primeuix/themes": "^1.2.3",
+    "chart.js": "^4.5.0",
+    "chartjs": "^0.3.24",
     "jwt-decode": "^4.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
-    "primeng": "^20.1.2",
+    "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
